# clawd

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: self-hosted-relay.md  windows-support.md
docs/screenshots/: README.md
scripts/: bump-version.mjs  gen-updater-manifest.mjs  merge-updater-manifest.mjs  setup-updater-key.sh
src/: App.css  App.tsx  Details.tsx  achievements.ts  details.css  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  presence.rs  roam.rs  session.rs  tray.rs  usage.rs
src/assets/cat/: README.md  manifest.json
src/components/Cat/: Cat.tsx  CatSvg.tsx  cat.css
src/components/Charts/: HourlySparkline.tsx  ModelDonut.tsx  WeeklyHeatmap.tsx
src/components/Furniture/: Furniture.tsx  furniture.css
src/components/Peers/: PeerCats.tsx  peers.css
src/components/Playthings/: Ball.tsx  Bird.tsx  Butterfly.tsx  FishingRod.tsx  Yarn.tsx
src/hooks/: useBreakReminder.ts  useCatState.ts  useCelebration.ts  useConfig.ts  useGoldenMoment.ts  useIdleThoughts.ts  useLateNightCare.ts  usePomodoro.ts  usePresence.ts  useSessionAlert.ts  useSessionUsage.ts  useStats.ts  useUpdater.ts  useUsage.ts  useUsageReactions.ts
src/utils/: format.ts
tools/slicer/: slice_furniture.py  slice_sheet.py
