[package]
name = "clawd"
version = "0.1.0"
description = "Cute floating cat that shows Claude Code usage on macOS"
authors = ["chani"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't clash with the bin
# name on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "clawd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
# Global keyboard monitoring for the Option-key "grab" toggle.
rdev = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
