[package]
name = "clawd"
version = "0.7.0"
description = "Cute floating cat that shows Claude Code usage on macOS"
authors = ["chani"]
edition = "2021"
license = "MIT"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't clash with the bin
# name on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "clawd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
dirs = "5"
# LAN presence (social mode): mDNS service discovery for zero-config,
# server-less peer finding on the local network. Live state rides UDP on top.
mdns-sd = "0.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
# Self-update: fetch the signed `latest.json` off GitHub Releases, download and
# swap in the new `.app`. `process` is used to relaunch after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
