[package]
name = "clawd"
version = "0.11.4"
description = "Cute floating cat that shows Claude Code usage on macOS"
authors = ["chani"]
edition = "2021"
license = "MIT"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't clash with the bin
# name on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "clawd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
dirs = "5"
# LAN presence (social mode): mDNS service discovery for zero-config,
# server-less peer finding on the local network. Live state rides UDP on top.
mdns-sd = "0.11"
# WAN presence (social mode, remote rooms): iroh gives P2P over QUIC with
# hole-punching and n0's public relays as fallback, so no server of our own.
# iroh-gossip carries the same coarse payload over a room topic. The transport
# is async, so it runs on its own tokio runtime thread.
iroh = "0.91"
iroh-gossip = "0.91"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
futures-lite = "2"
bytes = "1"
postcard = { version = "1", features = ["alloc"] }
data-encoding = "2"
rand = "0.8"
anyhow = "1"
# Optional session-usage integration (experimental): an HTTP client for the
# Anthropic Messages API (we read rate-limit headers off the response) and the
# OS keychain for the OAuth token, so it never touches the config store.
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
# Self-update: fetch the signed `latest.json` off GitHub Releases, download and
# swap in the new `.app`. `process` is used to relaunch after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
